Modernize code - fix deprecations
Took 34 minutes